--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -50,7 +50,7 @@
                                 <a href="/">Home</a>
                             </li>
                             <li>
-                                <a href="/allproducts">Shop</a>
+                                <a href="/all-products">Shop</a>
                             </li>
                             <li>
                                 <a href="" >Product</a>
