--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -48,7 +48,7 @@
                             <a href="/">Home</a>
                         </li>
                         <li>
-                            <a href="/allproducts">Shop</a>
+                            <a href="/all-products">Shop</a>
                         </li>
                         <li>
                             <a href="" >Product</a>
@@ -62,7 +62,7 @@
                                     <a href="/about" >About</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html" >Contact</a>
+                                    <a href="" >Contact</a>
                                 </li>
                                
                                 <!-- <li><a href="404.html">Error 404</a></li> -->
@@ -180,7 +180,7 @@
                     <hr style="border-color: rgb(230, 151, 4);">
                 </div>
                
-                <form action="/loginverfy" method="post">
+                <form action="/login-verify" method="post">
                    
                     <div class="form-group">
                         <label for="singin-email">Username or Email address *</label>
