--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -21,7 +21,7 @@
                         <a href="#">Links</a>
                         <ul>
                             <li><a href="tel:#"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
-                            <li><a href="wishlist.html"><i class="icon-heart-o"></i>My Wishlist</a></li>
+                            <li><a href=""><i class="icon-heart-o"></i>My Wishlist</a></li>
                             <li><a href="/about">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
                             <li><a href="/login"><i class="icon-user"></i>Login</a></li>
@@ -50,7 +50,7 @@
                             <a href="/">Home</a>
                         </li>
                         <li>
-                            <a href="/allproducts">Shop</a>
+                            <a href="/all-products">Shop</a>
                         </li>
                         <li>
                             <a href="" >Product</a>
@@ -64,7 +64,7 @@
                                     <a href="/about" >About</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html" >Contact</a>
+                                    <a href="" >Contact</a>
                                 </li>
                                
                                 <!-- <li><a href="404.html">Error 404</a></li> -->
@@ -180,7 +180,7 @@
                 <h3>OTP Verification</h3>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
-                        <form action="/verifyotp" method="post" style="color: black;">
+                        <form action="/verify-otp" method="post" style="color: black;">
                             <div class="form-group">
                                 <label for="otp" style="color: black;">Enter 4-digit OTP</label>
                                 <input type="text" class="form-control otp-box" id="otp" name="otp" maxlength="4" pattern="\d{4}" title="Please enter a 4-digit OTP" required>
@@ -204,7 +204,7 @@
             <!-- <h6 class="text-danger" id="error-message"></h6> -->
             <div class="" id="button-container" style="display: none;">
                 <button class="btn btn-outline-dark-2 text-dark" id="resend-btn" onclick="alerts()" type="submit">
-                    <a href="/resendotp">
+                    <a href="/resend-otp">
                         Resend OTP
                     </a>
                 </button>
