--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -6,7 +6,7 @@
         <div class="container d-flex align-items-center">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item"><a href="/allproducts">Shop</a></li>
+                <li class="breadcrumb-item"><a href="/all-products">Shop</a></li>
                 <li class="breadcrumb-item active" aria-current="page"><%= product.name %> </li>
             </ol>
         </div><!-- End .container -->
