--- a/views/admin/addcategory.ejs
+++ b/views/admin/addcategory.ejs
@@ -15,6 +15,9 @@
             <input type="text" name="name" id="name" class="form-control" placeholder="Category Name" required>
             <small id="nameError" class="text-danger"></small>
         </div>
+        <div>
+            <p class="text-danger"><%= message %></p>
+        </div>
         <div class="form-group">
             <label for="description">Category Description</label>
             <textarea name="description" id="description" class="form-control" rows="3" placeholder="Category Description" required></textarea>
