--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -31,6 +31,15 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+      <!-- Plugins CSS File -->
+      <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+      <link rel="stylesheet" href="assets/css/plugins/owl-carousel/owl.carousel.css">
+      <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
+      <!-- Main CSS File -->
+      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="assets/css/plugins/nouislider/nouislider.css">
+      <link rel="stylesheet" href="assets/css/demos/demo-11.css">
 </head>
 
 <body>
