--- a/views/admin/layout/adfooter.ejs
+++ b/views/admin/layout/adfooter.ejs
@@ -17,6 +17,8 @@
     <script src="/admin_assets/js/todolist.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- end -->
 
 
