--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -72,7 +72,10 @@
                                             </div><!-- End .product-cat -->
                                             <h3 class="product-title"><a href="/product/<%= product._id %>"><%= product.name %></a></h3><!-- End .product-title -->
                                             <div class="product-price">₹
-                                               <%= product.price %>
+                                               <%= product.discount %>
+                                               <div class="text-muted ml-2">
+                                               <small><del>₹<%= product.price %></del></small>
+                                               </div>
                                             </div><!-- End .product-price -->
                                             <div class="ratings-container">
                                                 <div class="ratings">
