--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -58,25 +58,46 @@
 </footer>
 
 <script>
-    function toggleCategory(categoryId, currentStatus) {
-    const confirmationMessage = currentStatus ? "Are you sure you want to block this category?" : "Are you sure you want to activate this category?";
+     function toggleCategory(categoryId, currentStatus) {
+        const confirmationMessage = currentStatus == 'active' ? "Are you sure you want to block this category?" : "Are you sure you want to activate this category?";
 
-    if (confirm(confirmationMessage)) {
-        fetch(`/admin/category/toggle/${categoryId}`, {
-            method: 'POST'
-        })
-        .then(response => {
-            if (response.ok) {
-                window.location.reload(); // Refresh the page
-            } else {
-                throw new Error('Something went wrong');
+        Swal.fire({
+            title: 'Confirmation',
+            text: confirmationMessage,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch(`/admin/category/toggle/${categoryId}`, {
+                    method: 'POST'
+                })
+                .then(response => {
+                    if (response.ok) {
+                        Swal.fire(
+                            'Success!',
+                            'Category status has been updated.',
+                            'success'
+                        ).then(() => {
+                            window.location.reload(); // Refresh the page
+                        });
+                    } else {
+                        throw new Error('Something went wrong');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    Swal.fire(
+                        'Error!',
+                        'Something went wrong.',
+                        'error'
+                    );
+                });
             }
-        })
-        .catch(error => {
-            console.error('Error:', error);
         });
     }
-}
 </script>
 
 <%- include('./layout/adfooter.ejs') %>
