--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -66,23 +66,46 @@
 
 <script>
     function toggleProduct(productId, currentStatus) {
-    const confirmationMessage = currentStatus ? "Are you sure you want to block this Product?" : "Are you sure you want to activate this Products?";
+    const confirmationMessage = currentStatus == 'active' ? "Are you sure you want to block this Product?" : "Are you sure you want to activate this Products?";
 
-    if (confirm(confirmationMessage)) {
-        fetch(`/admin/products/toggle/${productId}`, {
-            method: 'POST'
-        })
-        .then(response => {
-            if (response.ok) {
-                window.location.reload(); // Refresh the page
-            } else {
-                throw new Error('Something went wrong');
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-        });
-    }
+
+    Swal.fire({
+        title: 'Confirmation',
+        text: confirmationMessage,
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes'
+    }).then((result) => {
+        if(result.isConfirmed) {
+            fetch(`/admin/products/toggle/${productId}`, {
+                method: 'POST'
+            })
+            .then(response => {
+                if(response.ok) {
+                    Swal.fire(
+                        'Success!',
+                        'Product status has been updated.',
+                        'success'
+                    ).then(() => {
+                        window.location.reload();    // Refresh the page
+                    });
+                }else {
+                    throw new Error('Something went wrong');
+                }
+            })
+            .catch(error => {
+                console.error('Error:',error);
+                Swal.fire(
+                    'Error!',
+                    'Something went wrong.',
+                    'error'
+                );
+            });
+        }
+    });
+    
 }
 </script>
 
