--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -28,17 +28,17 @@
                             </div><!-- End .intro-content -->
                         </div><!-- End .intro-slide -->
     
-                        <div class="intro-slide" style="background-image: url(assets/images/demos/demo-11/slider/slide-2.jpg);">
+                        <!-- <div class="intro-slide" style="background-image: url(assets/images/demos/demo-11/slider/slide-2.jpg);">
                             <div class="container intro-content">
-                                <h3 class="intro-subtitle text-primary">all at 50% off</h3><!-- End .h3 intro-subtitle -->
-                                <h1 class="intro-title text-white">The Most Beautiful <br>Novelties In Our Shop</h1><!-- End .intro-title -->
+                                <h3 class="intro-subtitle text-primary">all at 50% off</h3> End .h3 intro-subtitle 
+                                <h1 class="intro-title text-white">The Most Beautiful <br>Novelties In Our Shop</h1> End .intro-title 
     
                                 <a href="category.html" class="btn btn-outline-primary-2 min-width-sm">
                                     <span>SHOP NOW</span>
                                     <i class="icon-long-arrow-right"></i>
                                 </a>
-                            </div><!-- End .intro-content -->
-                        </div><!-- End .intro-slide -->
+                            </div> End .intro-content 
+                        </div>End .intro-slide -->
                     </div><!-- End .intro-slider owl-carousel owl-simple -->
     
                     <span class="slider-loader"></span><!--End .slider-loader-->
