change mongoose connection in config

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -185,7 +185,7 @@
                 <div class="container">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Register</li>
+                        <li class="breadcrumb-item active" aria-current="page">Sign Up</li>
                     </ol>
                 </div><!-- End .container -->
             </nav><!-- End .breadcrumb-nav -->
@@ -196,7 +196,7 @@
             			<div class="form-tab">
 	            			<ul class="nav nav-pills nav-fill" role="tablist">
 							    <li class="nav-item">
-							        <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#register-2" role="tab" aria-controls="register-2" aria-selected="true">Register</a>
+							        <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#register-2" role="tab" aria-controls="register-2" aria-selected="true">Sign Up</a>
 							    </li>
 							</ul>
 							<div class="tab-content">
@@ -237,7 +237,7 @@
 			            						<i class="icon-long-arrow-right"></i>
 			                				</button>
                                              <div style="padding-left: 80px;">
-                                                <p>Already have an Account? <a class="text-white"  href="/login">Login</a></p>
+                                                <p>Already have an Account? <a  class="text-white" style="text-decoration: none;" href="/login">Sign In</a></p>
                                              </div>
 							    		</div><!-- End .form-footer -->
 							    	</form>
