--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -166,7 +166,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Login</li>
+                <li class="breadcrumb-item active" aria-current="page">Sign In</li>
             </ol>
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
@@ -176,7 +176,7 @@
            
             <div class="form-box" style="background-color: rgb(204, 202, 202);">
                 <div class="text-center">
-                    <h3>Login</h3>
+                    <h3>Sign In</h3>
                     <hr style="border-color: rgb(230, 151, 4);">
                 </div>
                
@@ -211,7 +211,7 @@
                             <a style="margin-left: 190px;" href="" class="text-dark">Forgotten Password?</a>
                         </div>
                         <div class=" mt-3 " style="margin-left: 100px;">
-                            <p>Don't have an account? <a class="text-white" href="/register">Register</a></p>
+                            <p>Don't have an account? <a class="text-white" href="/register">Sign Up</a></p>
                         </div>
                     </div><!-- End .form-footer -->
                 </form>
