--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -222,7 +222,7 @@
                 </div><!-- End .tab-content -->
             </div><!-- End .product-details-tab -->
 
-            <h2 class="title text-center mb-4">Related Products</h2><!--End .title text-center -->
+            <h2 class="title text-center mb-4">You May Also Like</h2><!--End .title text-center -->
 
             <div class="owl-carousel owl-simple carousel-equal-height carousel-with-shadow" data-toggle="owl" 
                 data-owl-options='{
