--- a/views/admin/productedit.ejs
+++ b/views/admin/productedit.ejs
@@ -128,71 +128,105 @@
 </footer>
 
 
-
-
 <script>
     function validate() {
-           var name = document.getElementById("name").value.trim();
-           console.log(name)
-           var description = document.getElementById("description").value.trim();
-           console.log(description)
-           var price = document.getElementById("price").value.trim();
-           console.log(price)
-           var quantity = document.getElementById("quantity").value.trim();
-           console.log(quantity)
-           var discount = document.getElementById("discountPrice").value.trim();
-           console.log(discount)
-            var category = document.getElementById("category").value;
-            console.log(category);
+        var name = document.getElementById("name").value.trim();
+        console.log(name);
+        var description = document.getElementById("description").value.trim();
+        console.log(description);
+        var price = document.getElementById("price").value.trim();
+        console.log(price);
+        var quantity = document.getElementById("quantity").value.trim();
+        console.log(quantity);
+        var discount = document.getElementById("discountPrice").value.trim();
+        console.log(discount);
+        var category = document.getElementById("category").value;
+        console.log(category);
+
+        var newImage1Input = document.getElementById('newimage1');
+        if (newImage1Input) {
+            var newImage1File = newImage1Input.files[0];
+            console.log(newImage1File);
+        }
+
+        var newImage2Input = document.getElementById('newimage2');
+        if (newImage2Input) {
+            var newImage2File = newImage2Input.files[0];
+            console.log(newImage2File);
+        }
+
+        var newImage3Input = document.getElementById('newimage3');
+        if (newImage3Input) {
+            var newImage3File = newImage3Input.files[0];
+            console.log(newImage3File);
+        }
+
+        var newImage4Input = document.getElementById('newimage4');
+        if (newImage4Input) {
+            var newImage4File = newImage4Input.files[0];
+            console.log(newImage4File);
+        }
+
+        var nameError = document.getElementById("nameError");
+        var descriptionError = document.getElementById("descriptionError");
+        var priceError = document.getElementById("priceError");
+        var quantityError = document.getElementById("quantityError");
+        var discountError = document.getElementById("discountError");
 
 
-           var nameError = document.getElementById("nameError");
-           var descriptionError = document.getElementById("descriptionError");
-           var priceError = document.getElementById("priceError");
-           var quantityError = document.getElementById("quantityError");
-           var discountError = document.getElementById("discountError");
-           
-           // Reset errors
-           nameError.textContent = "";
-           descriptionError.textContent = "";
-           priceError.textContent = "";
-           quantityError.textContent = "";
-           discountError.textContent = "";
-   
-           var isValid = true;
-   
-           if (name === "") {
-               nameError.textContent = "Please enter a product name.";
-               isValid = false;
-           }
-   
-           if (description === "") {
-               descriptionError.textContent = "Please enter a product description.";
-               isValid = false;
-           }
-   
-           if (isNaN(parseFloat(price)) || price <= 0) {
-               priceError.textContent = "Please enter a valid price.";
-               isValid = false;
-           }
-   
-           if (isNaN(parseInt(quantity)) || quantity <= 0) {
-               quantityError.textContent = "Please enter a valid quantity.";
-               isValid = false;
-           }
-   
-           if(isNaN(parseFloat(discount)) || discount <= 0 || discount >=100 ) {
-               discountError.textContent = "Check Discount Percentage"
-               isValid = false;
-           }
-   
-           if(isValid==false){
-            return
-           }
-           let formData={name,category,description,price,quantity,discount}
-            console.log(formData)
+        // Reset errors
+        nameError.textContent = "";
+        descriptionError.textContent = "";
+        priceError.textContent = "";
+        quantityError.textContent = "";
+        discountError.textContent = "";
 
-       fetch('/admin/products/edit/<%= product._id %>', {
+        var isValid = true;
+
+        if (name === "") {
+            nameError.textContent = "Please enter a product name.";
+            isValid = false;
+        }
+
+        if (description === "") {
+            descriptionError.textContent = "Please enter a product description.";
+            isValid = false;
+        }
+
+        if (isNaN(parseFloat(price)) || price <= 0) {
+            priceError.textContent = "Please enter a valid price.";
+            isValid = false;
+        }
+
+        if (isNaN(parseInt(quantity)) || quantity <= 0) {
+            quantityError.textContent = "Please enter a valid quantity.";
+            isValid = false;
+        }
+
+        if (isNaN(parseFloat(discount)) || discount <= 0 || discount >= 100) {
+            discountError.textContent = "Check Discount Percentage";
+            isValid = false;
+        }
+
+        if (!isValid) {
+            return;
+        }
+
+        let formData = {
+            name,
+            category,
+            description,
+            price,
+            quantity,
+            discount,
+            newImage1Input: newImage1File,
+            newImage2Input: newImage2File,
+            newImage3Input: newImage3File,
+            newImage4Input: newImage4File
+        };
+        console.log(formData);
+
+        fetch('/admin/products/edit/<%= product._id %>', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -203,17 +237,16 @@
                 throw new Error('Network response was not ok');
             }
             return response.json();
-        })
-        .then(data => {
+        }).then(data => {
             console.log('Success:', data);
             window.location.href = '/admin/products';
-        })
-        .catch(error => {
+        }).catch(error => {
             console.error('Error:', error);
         });
-       }
+    }
 </script>
 
+<!--images Deleting-->
 <script>
     document.addEventListener("DOMContentLoaded", function() {
     const deleteButtons = document.querySelectorAll(".delete-image-btn");
@@ -238,6 +271,11 @@
             .then(data => {
                 console.log(data.message);
                 button.parentElement.remove();
+                location.reload()
+                // document.querySelector("body > div > div > div > div > div > div > div.card-body > form > div.container > div > div > div > div:nth-child(1) > button").innerHTML = "Testing"
+                // document.querySelector("body > div > div > div > div > div > div > div.card-body > form > div.container > div > div > div > div:nth-child(2) > button").innerHTML = "Testing"
+                // document.querySelector("body > div > div > div > div > div > div > div.card-body > form > div.container > div > div > div > div:nth-child(3) > button").innerHTML = "Testing"
+                // document.querySelector("body > div > div > div > div > div > div > div.card-body > form > div.container > div > div > div > div:nth-child(4) > button").innerHTML = "Testing"
             })
             .catch(error => {
                 console.error('There has been a problem with your fetch operation:', error);
@@ -246,6 +284,8 @@
     });
 });
 </script>
+
+<!--Previe new images-->
 <script>
     function previewImage(input,previewId) {
         const preview = document.getElementById(previewId);
